welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: '{' expected but 'true' found.
true => 2*(a+b)
^sumDouble:4: error: not a legal formal parameter
false=> a+b} 
^