welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
(a==b) match
true => 2*(a+b)
false=> a+b}